--- a/src/main/resources/templates/usuario/detallecompra.html
+++ b/src/main/resources/templates/usuario/detallecompra.html
@@ -15,11 +15,13 @@
 	<main class="main">
 		<div class="container">
 
-			<h1 class="mt-4 mb-3">Spring eCommercce <small>Compras</small></h1>
+			<h1 class="mt-4 mb-3">Spring eCommercce <small>Detalles</small></h1>
 
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-				<li class="breadcrumb-item active">Compras</li>
+				<li class="breadcrumb-item"><a th:href="@{/usuario/compras}">Compras</a></li>
+				<li class="breadcrumb-item active">Detalle de la compra</li>
+
 			</ol>
 
 			<div class="card mb-4">
@@ -29,23 +31,23 @@
 							<table class="table">
 								<thead>
 									<tr>
-										<th scope="col">No. de orden</th>
-										<th scope="col">Fecha</th>
-										<th scope="col">Valor</th>
-										<th scope="col">Accion</th>
+										<th scope="col">Cantidad</th>
+										<th scope="col">Producto</th>
+										<th scope="col">Precio</th>
+										<th scope="col">Total</th>
 									</tr>
 								</thead>
 								<tbody>
-									<tr th:each="orden:${ordenes}">
-										<td th:text="${orden.numero}"></td>
-										<td th:text="${orden.fechacreacion}">
+									<tr th:each="detalle:${detalles}">
+										<td th:text="${detalle.cantidad}"></td>
+										<td th:text="${detalle.nombre}">
 										</td>
 										<td
-											th:text="${#strings.concat('$', #numbers.formatDecimal(orden.total, 0, 'POINT',0, 'POINT'))}">
+											th:text="${#strings.concat('$', #numbers.formatDecimal(detalle.precio, 0, 'POINT',0, 'POINT'))}">
 										</td>
-										<td><a class="btn btn-success"
-												th:href="@{/usuario/detalle/{id} (id=${orden.id})}">Ver Detalle</a></td>
-
+										<td
+											th:text="${#strings.concat('$', #numbers.formatDecimal(detalle.total, 0, 'POINT',0, 'POINT'))}">
+										</td>
 									</tr>
 								</tbody>
 							</table>
