--- a/src/main/resources/templates/administrador/templete_Admin.html
+++ b/src/main/resources/templates/administrador/templete_Admin.html
@@ -44,7 +44,7 @@
 	<header id="header" class="header fixed-top d-flex align-items-center">
 
 		<div class="d-flex align-items-center justify-content-between">
-			<a href="index.html" class="logo d-flex align-items-center">
+			<a th:href="@{/}" class="logo d-flex align-items-center">
 				<img th:src="@{assetsADMIN/img/logo.png}" alt="">
 				<span class="d-none d-lg-block">Ecommerce</span>
 			</a>
@@ -259,9 +259,9 @@
 						</li>
 
 						<li>
-							<a class="dropdown-item d-flex align-items-center" href="#">
+							<a class="dropdown-item d-flex align-items-center" th:href="@{/usuario/cerrar}">
 								<i class="bi bi-box-arrow-right"></i>
-								<span>Sign Out</span>
+								<span>Cerrar Sesion</span>
 							</a>
 						</li>
 
@@ -304,7 +304,24 @@
 
 				</ul>
 			</li><!-- End Components Nav -->
-
+			<li class="nav-item">
+			        <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+			          <i class="bi bi-journal-text"></i><span>Reportes</span><i class="bi bi-chevron-down ms-auto"></i>
+			        </a>
+			        <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+			          <li>
+			            <a th:href="@{/administrador/usuarios}">
+			              <i class="bi bi-circle"></i><span>Usuarios</span>
+			            </a>
+			          </li>
+			          <li>
+			            <a th:href="@{/administrador/ordenes}">
+			              <i class="bi bi-circle"></i><span>Ordenes</span>
+			            </a>
+			          </li>
+			         
+			        </ul>
+			      </li><!-- End Forms Nav -->
 		</ul>
 
 	</aside><!-- End Sidebar-->
